--- a/views/index.pug
+++ b/views/index.pug
@@ -120,11 +120,11 @@ html(lang='en')
                 a(href='#') Help
           .col.col-lg-6.footer-right-items
             h2 Contact Us.
-            form
+            form#feedback-form
               .form-group
-                textarea(name='Text', rows='2', cols='75', wrap='hard')
+                textarea#feedback-textarea(name='Text', rows='2', cols='75', wrap='hard')
               .form-group
-                input#Email.form-control(type='email', placeholder='Enter email')
+                input#feedback-email.form-control(type='email', placeholder='Enter email')
                 small#emailHelp.form-text.text-muted We'll never share your email with anyone else.
               button.btn.btn-primary(type='submit') Submit
         div
@@ -135,6 +135,7 @@ html(lang='en')
     script(src='bower-components/jquery/dist/jquery.js')
     script(src='https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js', integrity='sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4', crossorigin='anonymous')
     script(src='bower-components/bootstrap/dist/js/bootstrap.min.js')
+    script(src='../js/Validation.js')
     script.
       $(document).ready(function () {
       $('.carousel').carousel();
