--- a/views/signup.pug
+++ b/views/signup.pug
@@ -33,6 +33,8 @@ html(lang='en')
           if errors
             each error, i in errors
               div(class="alert alert-danger") #{error.msg}
+          else if error
+            div(class="alert alert-danger") #{error}
           form#user-sign-up-form(method='POST', action='/users/register')
             .form-group
               label(for='Name') Name
@@ -77,11 +79,11 @@ html(lang='en')
                 a(href='#') Help
           .col.col-lg-6.footer-right-items
             h2 Contact Us.
-            form
+            form#feedback-form
               .form-group
-                textarea(name='Text', rows='2', cols='75', wrap='hard')
+                textarea#feedback-textarea(name='Text', rows='2', cols='75', wrap='hard')
               .form-group
-                input#Email.form-control(type='email', placeholder='Enter email')
+                input#feedback-email.form-control(type='email', placeholder='Enter email')
                 small#emailHelp.form-text.text-muted We'll never share your email with anyone else.
               button.btn.btn-primary(type='submit') Submit
         div
