--- a/views/profile.pug
+++ b/views/profile.pug
@@ -8,6 +8,27 @@ html(lang='en')
     link(rel='stylesheet', href='../bower-components/bootstrap/dist/css/bootstrap.min.css')
     link(rel='stylesheet', href='../css/font-awesome.min.css')
     link(rel='stylesheet', href='../css/styles.css')
+    style.
+      .profile-coverpic{
+      height: 50vh;
+      background: #464646 url(#{user.CoverPic}) center no-repeat;
+      background-size: cover;
+      background-attachment: fixed;
+      left: 0;
+      right: 0;
+      background-color: #464646;
+      display: flex;
+      flex-direction: column-reverse;
+      }
+      .profile-pic{
+        height: 250px;
+        width: 250px;
+        border: 6px solid #fff;
+        border-radius: 50%;
+        background: #464646 url(#{user.ProfilePic}) center no-repeat;
+        background-size: cover;
+        margin-top: -110px;
+      }
   body.profile
     nav.navbar.navbar-expand.navbar-light.nav-dark
       a#logo-light.navbar-brand(href='#') BLOG-IT
