posts creates a directory for each user

--- a/views/profile.pug
+++ b/views/profile.pug
@@ -52,15 +52,15 @@ html(lang='en')
             ul#profile-stats
               li
                 ul
-                  li 0
+                  li #{user.Followers}
                   li Followers
               li
                 ul
-                  li 0
+                  li #{user.Following}
                   li Following
               li
                 ul
-                  li 0
+                  li #{user.Posts}
                   li Posts
               li
                 ul
