post form database

--- a/views/profile.pug
+++ b/views/profile.pug
@@ -76,7 +76,7 @@ html(lang='en')
               li
                 a.btn.btn-block(href='#') Profile
               li
-                a.btn.btn-block(href='#') My Posts
+                a.btn.btn-block(href='/users/myPosts') My Posts
               li
                 a.btn.btn-block(href='#') Explore
               li
