--- a/views/my-posts.pug
+++ b/views/my-posts.pug
@@ -5,9 +5,30 @@ html(lang='en')
     meta(name='viewport', content='width=device-width, initial-scale=1.0')
     meta(http-equiv='X-UA-Compatible', content='ie=edge')
     title BLOG-IT
-    link(rel='stylesheet', href='bower-components/bootstrap/dist/css/bootstrap.min.css')
-    link(rel='stylesheet', href='css/font-awesome.min.css')
-    link(rel='stylesheet', href='css/styles.css')
+    link(rel='stylesheet', href='../bower-components/bootstrap/dist/css/bootstrap.min.css')
+    link(rel='stylesheet', href='../css/font-awesome.min.css')
+    link(rel='stylesheet', href='../css/styles.css')
+    style.
+      .profile-coverpic{
+      height: 50vh;
+      background: #464646 url(#{user.CoverPic}) center no-repeat;
+      background-size: cover;
+      background-attachment: fixed;
+      left: 0;
+      right: 0;
+      background-color: #464646;
+      display: flex;
+      flex-direction: column-reverse;
+      }
+      .profile-pic{
+        height: 250px;
+        width: 250px;
+        border: 6px solid #fff;
+        border-radius: 50%;
+        background: #464646 url(#{user.ProfilePic}) center no-repeat;
+        background-size: cover;
+        margin-top: -110px;
+      }
   body.profile
     nav.navbar.navbar-expand.navbar-light.nav-dark
       a#logo-light.navbar-brand(href='#') BLOG-IT
@@ -54,55 +75,35 @@ html(lang='en')
               li
                 a.btn.btn-block(href='#') Profile
               li
-                a.btn.btn-block(href='#') My Posts
+                a.btn.btn-block(href='/users/myPosts') My Posts
               li
                 a.btn.btn-block(href='#') Explore
               li
                 a.btn.btn-block(href='#') Logout
           .profile-right-column.col-lg-8
             .card-columns.my-post-cloumns
-              .card
-                img.card-img-top(src='...', alt='Card image cap')
-                .card-body
-                  h4.card-title Card title that wraps to a new line
-                  p.card-text
-                    | This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.
-              .card
-                img.card-img-top(src='...', alt='Card image cap')
-                .card-body
-                  h4.card-title Card title
-                  p.card-text This card has supporting text below as a natural lead-in to additional content.
-                  p.card-text
-                    small.text-muted Last updated 3 mins ago
-              .card
-                .card-body
-                  h4.card-title Card title
-                  p.card-text This card has supporting text below as a natural lead-in to additional content.
-                  p.card-text
-                    small.text-muted Last updated 3 mins ago
-              .card
-                img.card-img-top(src='...', alt='Card image cap')
-                .card-body
-                  h4.card-title Card title
-                  p.card-text This card has supporting text below as a natural lead-in to additional content.
-                  p.card-text
-                    small.text-muted Last updated 3 mins ago
-              .card
-                img.card-img-top(src='...', alt='Card image cap')
-                .card-body
-                  h4.card-title Card title
-                  p.card-text This card has supporting text below as a natural lead-in to additional content.
-                  p.card-text
-                    small.text-muted Last updated 3 mins ago
-              .card
-                .card-body
-                  h4.card-title Card title
-                  p.card-text
-                    | This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.
-                  p.card-text
-                    small.text-muted Last updated 3 mins ago
+              if Posts
+                each post, i in Posts
+                  if post.Image == 'no-image'
+                    .card
+                      .card-body
+                        h4.card-title #{post.Title}
+                        p.card-text #{post.Content}
+                        p.card-text
+                          small.text-muted Last updated 3 mins ago
+                  else
+                    .card
+                      img.card-img-top(src='../users/'+post.UserId+'/images/'+post.Image, alt='Card image cap')
+                      .card-body
+                        h4.card-title #{post.Title}
+                        p.card-text #{post.Content}
+                        p.card-text
+                          small.text-muted Last updated 3 mins ago        
+              else
+                h2 You dont have any Posts.
+                    
     section
       #footer-reveal
-    script(src='bower-components/jquery/dist/jquery.js')
+    script(src='../bower-components/jquery/dist/jquery.js')
     script(src='https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js', integrity='sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4', crossorigin='anonymous')
-    script(src='bower-components/bootstrap/dist/js/bootstrap.min.js')
+    script(src='../bower-components/bootstrap/dist/js/bootstrap.min.js')
