--- a/views/index.pug
+++ b/views/index.pug
@@ -13,12 +13,12 @@ html(lang='en')
       a.navbar-brand(href='#') BLOG-IT
       div
         ul#my-nav-list.navbar-nav
-          form.form-inline.my-lg-0.my-nav-item
+          form.form-inline.my-lg-0.my-nav-item(method='POST',action='/search')
             .box
               .container-1
                 span.icon
                   i.fa.fa-search
-                input#search(type='search', placeholder='Search...')
+                input#search(type='search',name='Search' placeholder='Search...')
           li.nav-item.active.my-nav-item
             button.btn.btn-sm.btn-outline-primary.my-2.my-sm-0 Surprise Me!
           li.nav-item.active.my-nav-item
