--- a/views/trending.pug
+++ b/views/trending.pug
@@ -13,7 +13,7 @@ html(lang='en')
       a#logo-light.navbar-brand(href='#') BLOG-IT
       div
         ul#my-nav-list.navbar-nav
-          form.form-inline.my-lg-0.my-nav-item
+          form.form-inline.my-lg-0.my-nav-item(method='POST',action='/search')
             .box
               .container-1
                 span.icon
