Fixed Bug of searching from pages other than index page

--- a/views/post.pug
+++ b/views/post.pug
@@ -26,7 +26,7 @@ html(lang='en')
               .container-1
                 span.icon
                   i.fa.fa-search
-                input#search(type='search', placeholder='Search...')
+                input#search(type='search',name='Search' placeholder='Search...')
           li.nav-item.active.my-nav-item
             button.btn.btn-sm.btn-outline-primary.my-2.my-sm-0 Surprise Me!
           li.nav-item.active.my-nav-item
