--- a/views/search.pug
+++ b/views/search.pug
@@ -18,7 +18,7 @@ html(lang='en')
               .container-1
                 span.icon
                   i.fa.fa-search
-                input#search(type='search', placeholder='Search...')
+                input#search(type='search',name='Search' placeholder='Search...')
           li.nav-item.active.my-nav-item
             button.btn.btn-sm.btn-outline-primary.my-2.my-sm-0 Surprise Me!
           li.nav-item.active.my-nav-item
@@ -32,7 +32,7 @@ html(lang='en')
             if users
               each user, i in users
                 .card.user-card.text-center.col-lg-3
-                  img.card-img-top(src='images/IMG_5688_1.jpg', alt='')
+                  img.card-img-top(src=user.ProfilePic, alt='')
                   .card-body
                     h4.card-title #{user.FirstName + ' ' + user.LastName}
             else
