--- a/views/search.pug
+++ b/views/search.pug
@@ -31,10 +31,11 @@ html(lang='en')
           .row
             if users
               each user, i in users
-                .card.user-card.text-center.col-lg-3
-                  img.card-img-top(src=user.ProfilePic, alt='')
-                  .card-body
-                    h4.card-title #{user.FirstName + ' ' + user.LastName}
+                a(href="/users/profile/"+user._id)
+                  .card.user-card.text-center.col-lg-3
+                    img.card-img-top(src=user.ProfilePic, alt='')
+                    .card-body
+                      h4.card-title #{user.FirstName + ' ' + user.LastName}
             else
               h4 #{errUser}
         .row
