--- a/views/post.pug
+++ b/views/post.pug
@@ -16,6 +16,15 @@ html(lang='en')
         background-origin: border-box;
         background-size: cover;
       }
+      .comment-profile-pic{
+        height: 100px;
+        width: 100px;
+        border: 1px solid #222;
+        border-radius: 50%;
+        background: #464646 url('../../users/#{post.UserId}/images/#{post.Image}') center no-repeat;
+        background-size: contain;
+        margin-right: 0.8rem;
+      }
   body.profile
     nav.navbar.navbar-expand.navbar-light.nav-dark
       a#logo-light.navbar-brand(href='#') BLOG-IT
@@ -38,6 +47,36 @@ html(lang='en')
           h1 #{post.Title}
         .post-content
           p #{post.Content}
+        .post-footer
+          .container.post-footers
+            a(href="#")
+              img(src='../../images/like.png')
+            p#likes 00likes
+        if CurrentUser != 0    
+          .post-comments
+            .container.comments-section
+              .comment-form
+                form(method='POST',action='/users/commentPost/'+post._id)
+                  textarea.comment-textarea(name='commentsContent', rows='3', cols='75', wrap='hard')
+                  button.btn.btn-outline-primary.comment-submit-btn.btn-sm(type='submit') Comment
+              .comments-area
+                .comment
+                  ul#comment
+                    li
+                      .comment-profile-pic
+                    li
+                      .comment-area
+                        h4 Bhushan Kolhe
+                        p
+                          lorem lorem lorem lorem lorem lorem lorem lorem lorem loremv lorem loremlorem loremlorem lorem.
+                  ul#comment
+                    li
+                      .comment-profile-pic
+                    li
+                      .comment-area
+                        h4 Bhushan Kolhe
+                        p
+                          lorem lorem lorem lorem lorem lorem lorem lorem lorem loremv lorem loremlorem loremlorem lorem.                        
     script(src='../../bower-components/jquery/dist/jquery.js')
     script(src='https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js', integrity='sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4', crossorigin='anonymous')
     script(src='../../bower-components/bootstrap/dist/js/bootstrap.min.js')
