--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,6 +1,6 @@
 html,body{
   max-width: 100%;
-  height: auto;
+  height: 100%;
 }
 a:hover,
 a{
@@ -692,8 +692,12 @@ div.search-page-separator{
 .comment-area{
   border: 2px solid #333;
   padding: 0.5rem;
+  width: 100%;
 }
 .post-footers{
   width: 70%;
   margin: auto;
+}
+.my-card-footer-profilePage{
+  display: inline;
 }
