--- a/views/index.pug
+++ b/views/index.pug
@@ -1,5 +1,5 @@
 doctype html
-html(lang='en')
+html(lang='en',style='height: auto;')
   head
     meta(charset='UTF-8')
     meta(name='viewport', content='width=device-width, initial-scale=1.0')
@@ -10,7 +10,7 @@ html(lang='en')
     link(rel='stylesheet', href='css/styles.css')
   body
     nav.navbar.navbar-expand.navbar-light
-      a.navbar-brand(href='#') BLOG-IT
+      a.navbar-brand(href='/') BLOG-IT
       div
         ul#my-nav-list.navbar-nav
           form.form-inline.my-lg-0.my-nav-item(method='POST',action='/search')
