--- a/views/post.pug
+++ b/views/post.pug
@@ -21,13 +21,11 @@ html(lang='en')
         width: 100px;
         border: 1px solid #222;
         border-radius: 50%;
-        background: #464646 url('../../users/#{post.UserId}/images/#{post.Image}') center no-repeat;
-        background-size: contain;
         margin-right: 0.8rem;
       }
   body.profile
     nav.navbar.navbar-expand.navbar-light.nav-dark
-      a#logo-light.navbar-brand(href='#') BLOG-IT
+      a#logo-light.navbar-brand(href='/') BLOG-IT
       div
         ul#my-nav-list.navbar-nav
           form.form-inline.my-lg-0.my-nav-item(method='POST',action='/search')
@@ -47,11 +45,6 @@ html(lang='en')
           h1 #{post.Title}
         .post-content
           p #{post.Content}
-        .post-footer
-          .container.post-footers
-            a(href="#")
-              img(src='../../images/like.png')
-            p#likes 00likes
         if CurrentUser != 0    
           .post-comments
             .container.comments-section
@@ -59,24 +52,18 @@ html(lang='en')
                 form(method='POST',action='/users/commentPost/'+post._id)
                   textarea.comment-textarea(name='commentsContent', rows='3', cols='75', wrap='hard')
                   button.btn.btn-outline-primary.comment-submit-btn.btn-sm(type='submit') Comment
-              .comments-area
-                .comment
-                  ul#comment
-                    li
-                      .comment-profile-pic
-                    li
-                      .comment-area
-                        h4 Bhushan Kolhe
-                        p
-                          lorem lorem lorem lorem lorem lorem lorem lorem lorem loremv lorem loremlorem loremlorem lorem.
-                  ul#comment
-                    li
-                      .comment-profile-pic
-                    li
-                      .comment-area
-                        h4 Bhushan Kolhe
-                        p
-                          lorem lorem lorem lorem lorem lorem lorem lorem lorem loremv lorem loremlorem loremlorem lorem.                        
+              if post.NoOfComments >= 0
+                .comments-area
+                  each comment, i in Comments
+                    each user, i in users
+                      if comment.UserId == user._id
+                        .comment
+                          ul#comment
+                            li
+                              .comment-profile-pic(style='background: #464646 url('+'../'+ user.ProfilePic +') center no-repeat;background-size: cover;')
+                            li.comment-area
+                              h4 #{user.FirstName + ' ' + user.LastName}
+                              p #{comment.CommentContent}                      
     script(src='../../bower-components/jquery/dist/jquery.js')
     script(src='https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js', integrity='sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4', crossorigin='anonymous')
     script(src='../../bower-components/bootstrap/dist/js/bootstrap.min.js')
