--- a/views/signup.pug
+++ b/views/signup.pug
@@ -10,7 +10,7 @@ html(lang='en')
     link(rel='stylesheet', href='../css/styles.css')
   body
     nav.navbar.navbar-expand.navbar-light
-      a.navbar-brand(style='color:#fff;', href='#') BLOG-IT
+      a.navbar-brand(style='color:#fff;', href='/') BLOG-IT
       div
         ul#my-nav-list.navbar-nav
           form.form-inline.my-lg-0.my-nav-item(method='POST',action='/search')
