--- a/views/trending.pug
+++ b/views/trending.pug
@@ -10,7 +10,7 @@ html(lang='en')
     link(rel='stylesheet', href='css/styles.css')
   body.profile
     nav.navbar.navbar-expand.navbar-light.nav-dark
-      a#logo-light.navbar-brand(href='#') BLOG-IT
+      a#logo-light.navbar-brand(href='/') BLOG-IT
       div
         ul#my-nav-list.navbar-nav
           form.form-inline.my-lg-0.my-nav-item(method='POST',action='/search')
