Added Suprise Me

--- a/views/signup.pug
+++ b/views/signup.pug
@@ -20,7 +20,7 @@ html(lang='en')
                   i.fa.fa-search
                 input#search(type='search',name='Search' placeholder='Search...')
           li.nav-item.active.my-nav-item
-            button.btn.btn-sm.btn-outline-primary.my-2.my-sm-0 Surprise Me!
+            a.btn.btn-sm.btn-outline-primary.my-2.my-sm-0(href='/SupriseMe') Surprise Me!
           li.nav-item.active.my-nav-item
             button.btn.btn-sm.btn-outline-danger.my-2.my-sm-0 Trending!
     section#sign-up-form
