--- a/views/userProfile.pug
+++ b/views/userProfile.pug
@@ -41,7 +41,7 @@ html(lang='en')
                   i.fa.fa-search
                 input#search(type='search',name='Search' placeholder='Search...')
           li.nav-item.active.my-nav-item
-            button.btn.btn-sm.btn-outline-primary.my-2.my-sm-0 Surprise Me!
+            a.btn.btn-sm.btn-outline-primary.my-2.my-sm-0(href='/SupriseMe') Surprise Me!
           li.nav-item.active.my-nav-item
             button.btn.btn-sm.btn-outline-danger.my-2.my-sm-0 Trending!
     section#profile-cover
@@ -64,7 +64,7 @@ html(lang='en')
                   li Posts
               li
                 ul
-                  li 0
+                  li #{user.Views}
                   li Views
     section
       .container
