--- a/views/index.pug
+++ b/views/index.pug
@@ -8,7 +8,7 @@ html(lang='en',style='height: auto;')
     link(rel='stylesheet', href='bower-components/bootstrap/dist/css/bootstrap.min.css')
     link(rel='stylesheet', href='css/font-awesome.min.css')
     link(rel='stylesheet', href='css/styles.css')
-  body
+  body(style='height: auto;')
     nav.navbar.navbar-expand.navbar-light
       a.navbar-brand(href='/') BLOG-IT
       div
@@ -20,7 +20,7 @@ html(lang='en',style='height: auto;')
                   i.fa.fa-search
                 input#search(type='search',name='Search' placeholder='Search...')
           li.nav-item.active.my-nav-item
-            button.btn.btn-sm.btn-outline-primary.my-2.my-sm-0 Surprise Me!
+            a.btn.btn-sm.btn-outline-primary.my-2.my-sm-0(href='/SupriseMe') Surprise Me!
           li.nav-item.active.my-nav-item
             button.btn.btn-sm.btn-outline-danger.my-2.my-sm-0 Trending!
     section#cover
