--- a/views/post.pug
+++ b/views/post.pug
@@ -35,12 +35,13 @@ html(lang='en')
                   i.fa.fa-search
                 input#search(type='search',name='Search' placeholder='Search...')
           li.nav-item.active.my-nav-item
-            button.btn.btn-sm.btn-outline-primary.my-2.my-sm-0 Surprise Me!
+            a.btn.btn-sm.btn-outline-primary.my-2.my-sm-0(href='/SupriseMe') Surprise Me!
           li.nav-item.active.my-nav-item
             button.btn.btn-sm.btn-outline-danger.my-2.my-sm-0 Trending!
     section
       .container.post-area
-        .post-img
+        if post.Image != 'no-image'
+          .post-img
         .post-title
           h1 #{post.Title}
         .post-content
