--- a/views/profile.pug
+++ b/views/profile.pug
@@ -41,7 +41,7 @@ html(lang='en')
                   i.fa.fa-search
                 input#search(type='search',name='Search' placeholder='Search...')
           li.nav-item.active.my-nav-item
-            button.btn.btn-sm.btn-outline-primary.my-2.my-sm-0 Surprise Me!
+            a.btn.btn-sm.btn-outline-primary.my-2.my-sm-0(href='/SupriseMe') Surprise Me!
           li.nav-item.active.my-nav-item
             button.btn.btn-sm.btn-outline-danger.my-2.my-sm-0 Trending!
     section#profile-cover
@@ -72,7 +72,7 @@ html(lang='en')
                   li Posts
               li
                 ul
-                  li 0
+                  li #{user.Views}
                   li Views
     section#profile-body
       .container
@@ -134,7 +134,7 @@ html(lang='en')
                           a(href='#') #{post.NoOfComments} Comments
                       ul.card-footer-right
                         li
-                          small.text-muted Last updated 3 mins ago
+                          small.text-muted Created at: #{moment(post.CreatedAt).format('LT Do MMM YY')}
                 
     section
       #footer-reveal
