--- a/views/profile.pug
+++ b/views/profile.pug
@@ -4,6 +4,11 @@ html(lang='en')
     meta(charset='UTF-8')
     meta(name='viewport', content='width=device-width, initial-scale=1.0')
     meta(http-equiv='X-UA-Compatible', content='ie=edge')
+    meta(http-equiv="cache-control", content="max-age=0")
+    meta(http-equiv="cache-control", content="no-cache")
+    meta(http-equiv="expires", content="-1")
+    meta(http-equiv="expires", content="Tue, 01 Jan 1980 1:00:00 GMT")
+    meta(http-equiv="pragma", content="no-cache")
     title BLOG-IT
     link(rel='stylesheet', href='../bower-components/bootstrap/dist/css/bootstrap.min.css')
     link(rel='stylesheet', href='../css/font-awesome.min.css')
@@ -109,11 +114,11 @@ html(lang='en')
                     a(href="/users/post/"+post._id)
                       .card-body
                         h4.card-title #{post.Title}
-                        p.card-text #{post.Content}
+                        p.card-text #{post.ShortContent}
                     .card-footer
                       ul.card-footer-left
                         li
-                          a(href='#') 00 Views
+                          a(href='#') #{post.Views} Views
                         li
                           a(href='#') #{post.NoOfComments} Comments
                       ul.card-footer-right
@@ -125,11 +130,11 @@ html(lang='en')
                       img.card-img-top(src='../users/'+post.UserId+'/images/'+post.Image, alt='Card image cap')
                       .card-body
                         h4.card-title #{post.Title}
-                        p.card-text #{post.Content}
+                        p.card-text #{post.ShortContent}
                     .card-footer
                       ul.card-footer-left
                         li
-                          a(href='#') 00 Views
+                          a(href='#') #{post.Views} Views
                         li
                           a(href='#') #{post.NoOfComments} Comments
                       ul.card-footer-right
