--- a/views/userProfile.pug
+++ b/views/userProfile.pug
@@ -70,6 +70,8 @@ html(lang='en')
       .container
         .row
           .col-lg-3
+          .col-lg-3(style="color:#fff;margin-top:1rem;")
+            h2 #{user.FirstName + ' ' + user.LastName}
           .col-lg-2
             if CurrentUser
               if CurrentUser._id != user.id
@@ -96,18 +98,18 @@ html(lang='en')
                       .card
                         .card-body
                           h4.card-title #{post.Title}
-                          p.card-text #{post.Content}
+                          p.card-text #{post.ShortContent}
                           p.card-text
-                            small.text-muted Last updated 3 mins ago
+                            small.text-muted Created at: #{moment(post.CreatedAt).format('LT Do MMM YY')}
                   else
                     a(href="/users/post/"+post._id)
                       .card
                         img.card-img-top(src='../'+post.UserId+'/images/'+post.Image, alt='Card image cap')
                         .card-body
                           h4.card-title #{post.Title}
-                          p.card-text #{post.Content}
+                          p.card-text #{post.ShortContent}
                           p.card-text
-                            small.text-muted Last updated 3 mins ago        
+                            small.text-muted Created at: #{moment(post.CreatedAt).format('LT Do MMM YY')}      
                     
     section
       #footer-reveal
